--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     }
 
     button {
+      display: block;
       font-size: 1.5rem;
       padding: 20px 40px;
       background-color: #e53935;
