--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       .catch((error) => console.log('❌ Errore nel Service Worker:', error));
   }
 </script>
-  <title>Contrazioni</title>
+  <title>Movimenti fetali</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -61,9 +61,9 @@
   </style>
 </head>
 <body>
-  <h1>Registro Contrazioni</h1>
+  <h1>Registro Movimenti</h1>
   <div id="counter">0</div>
-  <button onclick="registerContraction()">Segna Contrazione</button>
+  <button onclick="registerContraction()">Segna Movimenti</button>
   <br>
   <br> 
   <br> 
