--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
   <div id="counter">0</div>
   <button onclick="registerContraction()">Cacca</button>
   <br>
-  <button onclick="registerPipi()">Pipì</button>
+  <button onclick="registerPipi()">Pipi</button>
   <br>
-  <button onclick="registersenoSx()">Seno SX</button>
+  <button onclick="registersenoSx()">senoSX</button>
   <br>
-  <button onclick="registersenoDx()">Seno DX</button>
+  <button onclick="registersenoDx()">senoDX</button>
   <br>
   <br> 
   <br> 
